--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,14 @@ spring:
       hibernate:
 #         show_sql: true
         format_sql: true
+
+  # default 설정 (global)
+#  data:
+#    web:
+#      pageable:
+#        default-page-size: 10
+#        max-page-size: 2000
+
 logging.level:
   org.hibernate.SQL: debug
 # org.hibernate.type: trace
